--- a/src/Component/Input/Input.css
+++ b/src/Component/Input/Input.css
@@ -21,7 +21,48 @@ form{
   
 }
 
+
 .form-input .root{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 15vh;
+    min-height: 10vh;
+}
+
+
+.form-input .root input{
+    padding: 12px;
+    width: 50%;
+    border-radius: 3px;
+    z-index: 1;
+}
+
+
+.form-input .root button{
+    width: 10%;
+    max-width: 30%;
+    min-width: 10%;
+    padding: 12px;
+    cursor: pointer;
+    color:white;
+    background-color: rgb(3, 0, 0);
+    z-index: 1;
+    margin-top: 12px;
+    transition: 0.4s ease;
+    border: none;
+}
+
+
+.form-input .root button:hover{
+    background-color: white;
+    color: black;
+    transition: 0.4s ease;
+    border: 1.7px solid black;
+}
+/* .form-input .root{
     border-radius: 5px;
     width: 30%;
     height: 6vh;
@@ -51,4 +92,16 @@ form{
         width: 60%;
         padding: 4px;
     }
+} */
+
+
+@media screen and (max-device-width:780px) {
+    .form-input .root button{
+        width: 50%;
+    }
+}@media screen and (max-device-width:480px) {
+    .form-input .root button{
+        width: 40%;
+    }
 }
+
