--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,8 @@ body {
   width: 100%;
   min-height: 100vh;
   height: 100vh;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Poppins', sans-serif;
+  /* font-family: 'Style Script', cursive; */
   background-color: rgb(247, 247, 247);
   overflow-x: hidden;
 }
