--- a/src/Component/Footer/Footer.css
+++ b/src/Component/Footer/Footer.css
@@ -70,7 +70,7 @@ text-align: center;
     border: none;
     background: #b5b5b5;
     height: 1px;
-    margin: 20px 0;
+    /* margin: 20px 0; */
 }
 
 
