--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -90,4 +90,15 @@ header{
 
 
 
+@media only screen and (min-width : 300px) and (max-width : 768px) and (orientation : landscape) {
+    /* portrait styles, when softkeyboard appears, goes here */
+
+
+.hero{
+    margin-top: 350px;
+}
+
+    }
+
+
 
