--- a/src/Component/MainSection/MainSection.css
+++ b/src/Component/MainSection/MainSection.css
@@ -70,9 +70,7 @@
     width: 100%;
     height: 100% !important;
     object-fit: cover;
-    /* filter: grayscale(8); */
     filter: brightness(0.7);
-    /* filter: opacity(0.7); */
 }
 
 
@@ -208,3 +206,49 @@
         height: 100%;
     }
 }
+
+
+@media screen and (max-device-aspect-ratio: 1/1), (max-aspect-ratio: 1/1){
+
+    .discover-collections-section{
+        height: 100vh !important;
+    }
+    .newsletter{
+        height: 100vh ;
+        padding: 0px 3px 0px 3px ;
+        display: flex ;
+        justify-content: space-evenly ;
+        align-items: center ;
+    }
+
+    .newsletter-title{
+        margin-bottom: 44px;
+    }
+  }
+
+  @media only screen and (min-width : 300px) and (max-width : 768px) and (orientation : landscape) {
+    /* portrait styles, when softkeyboard appears, goes here */
+
+.main-section{
+    margin-top: 360px;
+}
+    .discover-collections-section{
+        height: 120vh;
+    }
+
+
+    .newsletter{
+        height: 230vh ;
+        padding: 0px 3px 0px 3px ;
+        display: flex ;
+        justify-content: space-evenly ;
+        align-items: center ;
+    }
+    .newsletter-title{
+        margin-bottom: 100px;
+    }
+
+    }
+
+
+
