created pages and added routing

--- a/src/Component/Nav/Nav.css
+++ b/src/Component/Nav/Nav.css
@@ -153,9 +153,10 @@ nav{
     .nav-slidein{
         position: absolute;
          top: 74px;
-        background-color: rgb(235, 233, 233);
+         background-color: white;
+        /* background-color: rgb(235, 233, 233); */
         height: 94vh;
-        width: 90%;
+        width: 100%;
         right: 1px;
         z-index: -1;
         transform: translateX(0%);
@@ -166,8 +167,9 @@ nav{
         position: absolute;
          top: 74px;
          color: black;
-        background-color: rgb(235, 233, 233);
-   
+        /* background-color: rgb(235, 233, 233);
+    */       background-color: white;
+    
         height: 94vh;
         width: 90%;
         right: 1px;
